--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
@@ -95,7 +95,7 @@ A method call is an instruction that gets the computer to run the code in a [met
 
 ## Method Call -- when, why, and how
 
-As you have seen, [methods](../03-method) are building blocks that contain instructions that do a task -- sort of like mini-programs. A large part of your code will be calling methods to get them to do things you need done, in the order you need them done.
+As you have seen, [methods](../02-method) are building blocks that contain instructions that do a task -- sort of like mini-programs. A large part of your code will be calling methods to get them to do things you need done, in the order you need them done.
 
 When you are thinking about calling a method, you need to know what it does, what to give it, and what it will give you back. Writing the code to call a method is then simple: you just provide the name, and a list of values for arguments.
 
@@ -147,7 +147,7 @@ Following the identifier is a list of values within parenthesis.
 These are the arguments passed to the method for it to use.
 
 As the `WriteLine` method comes from the C# library `System.Console`, this example program starts with a [using directive](../00-program/#in-c) to tell the compiler to look in the `System.Console` library for any methods that are called.
-Remember that programs run in [sequence](../01-sequence.mdx), so we need to provide this directive *before* writing any code that calls a method from this library.
+Remember that programs run in [sequence](../01-sequence), so we need to provide this directive *before* writing any code that calls a method from this library.
 This is why it is convention to put using directives at the start of a program's source code.
 
 :::caution
