--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/04-water-bottle-visualizer.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/04-water-bottle-visualizer.mdx
@@ -7,7 +7,7 @@ This will help you practice how to think through algorithms to draw shapes.
 
 ## The Algorithm
 
-Drawing something to the screen needs us to think through the algorithm in the same way as we did for the change calculator and the airspeed programs. In the [multimedia primer](../../1-concepts/11-graphics) there is a list of different methods that we can call to perform the drawing for us, so we just need to work out what values we need to provide these methods.
+Drawing something to the screen needs us to think through the algorithm in the same way as we did for the change calculator and the airspeed programs. In the [multimedia primer](../../1-concepts/11-2-graphics) there is a list of different methods that we can call to perform the drawing for us, so we just need to work out what values we need to provide these methods.
 
 We can start by planning out the algorithm at a high level, and then work out the details. The plan we came up within involves the following steps:
 
