--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
@@ -47,7 +47,7 @@ Your program should:
 Here we will be trying out some SplashKit functionality and playing a song (or part thereof) back to us!
 
 In this task, it is up to you to create a program which plays part of an audio file for us.
-You might find it helpful to revisit the page on [playing music in SplashKit](../1-concepts/11-graphics#playing-music) for this task.
+You might find it helpful to revisit the page on [playing music in SplashKit](../1-concepts/11-2-graphics/#playing-music) for this task.
 
 Your program should:
 
@@ -66,7 +66,7 @@ Your program should:
 Here we will be creating the beginning of any good game: a splash-screen/title animation!
 
 In this task, it is up to you to create a short sequence of SplashKit method calls (drawing shapes, colours, images, and delays) to act as an introduction or title animation to a game.
-You might find it helpful to revisit the page on [drawing in SplashKit](../1-concepts/11-graphics#drawing-to-a-window) for this task.
+You might find it helpful to revisit the page on [drawing in SplashKit](../1-concepts/11-2-graphics/#drawing-to-a-window) for this task.
 
 Your program should:
 
