--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
@@ -17,7 +17,7 @@ Notice which **programming concepts** you are using, and think about how it rela
 ### Unit Converter
 
 <div class="not-content">
-  <YouTube id="Ts6awRByJAU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="R3xeYNt0dNg" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
 Here we will be putting together everything we learned across this chapter into something that might help us -- a unit converter!
