--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
@@ -47,7 +47,7 @@ Your program should:
 Here we will be trying out some SplashKit functionality and playing a song (or part thereof) back to us!
 
 In this task, it is up to you to create a program which plays part of an audio file for us.
-You might find it helpful to revisit the page on [playing music in SplashKit](../1-concepts/11-2-graphics/#playing-music) for this task.
+You might find it helpful to revisit the page on [playing music in SplashKit](/book/part-1-instructions/1-sequence-and-data/1-concepts/11-3-audio) for this task.
 
 Your program should:
 
