--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/03-airspeed-velocity.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/03-airspeed-velocity.mdx
@@ -5,9 +5,9 @@ import { YouTube } from 'astro-embed';
 
 On your journey, you encountered a strange person who mentioned something about coconuts and queries you vigorously about the airspeed velocity of unladen swallows.
 
-<div class="not-content">
-  <YouTube id="w8Rn_f75UHs" params="fs=1&start=104&modestbranding=1&rel=0&autoplay=1"/>
-</div>
+:::note
+This is a reference to a Monty Python film!
+:::
 
 To answer this age-old question, you can mock up the following program to calculate the airspeed velocity of these important birds. With a quick search, you find [an equation](http://www.style.org/strouhalflight) based on the Strouhal Number and some [details on swallows](http://style.org/unladenswallow/). We can use this information to create a program that can calculate the airspeed velocity of African and European Swallows.
 
