Add assignment to seq and data

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/3-explore/3-explore.mdx
@@ -7,12 +7,16 @@ Having explored this leg of the journey you are now approaching a rest stop and 
 
 ## Test Your Knowledge
 
-The following activities describe a program that you can create using the concepts we have learned so far. Use these to validate that you have developed the knowledge and skills needed to create programs that involve sequence and data.
+Create one of the following programs:
 
-As you work through the activities, focus on the **programming process and tools**.
-Build your program in several iterations of: understand what you need, design the logic, implement the code, and test that it works.
-Focus on **syntax** for the different instructions, and pick up some methods you can use in the libraries we are using.
-Notice which **programming concepts** you are using, and think about how it relates to the building blocks and terminology we introduced through this chapter. In particular, focus on the idea of sequence, the use of building blocks such as variables, constants, data types, and method calls, and the terminology for expressions and literal values.
+- [Test Your Knowledge](#test-your-knowledge)
+  - [Own Program](#own-program)
+  - [Unit Converter](#unit-converter)
+  - [Sound Player](#sound-player)
+  - [Game Splash Screen](#game-splash-screen)
+
+### Own Program
+
 
 ### Unit Converter
 
