Fix water bottle visualiser image

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/04-water-bottle-visualizer.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/04-water-bottle-visualizer.mdx
@@ -160,7 +160,7 @@ Have a go at coding this plan up yourself! Here are the steps that we suggest fo
 
 Here's a screenshot of our implementation running to show you what you're aiming for:
 
-![The water bottle filled to 37% of its capacity.](/book/part-1-instructions/1-sequence-and-data/1-tour/images/water-exec.png)
+![The water bottle filled to 37% of its capacity.](./images/water-exec.png)
 
 Remember you can have a look at our version of the code if you get stuck with any of these steps. The code is in the [wrap up](/book/part-1-instructions/1-sequence-and-data/4-camp/3-water-bottle) section.
 
