Add graphical tour for seq and data

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/00-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/00-overview.mdx
@@ -2,19 +2,12 @@
 title: Overview
 ---
 
-Sequence and data are core to every program. With these concepts we can perform calculations, and store and manipulate values.
+Let's get coding. Programming is a practical skill, so one of the best ways to learn this is through doing it.
 
-The concepts' section has provided you with [program](/book/part-1-instructions/1-sequence-and-data/2-trailside/00-program), [variable](/book/part-1-instructions/1-sequence-and-data/2-trailside/07-variable), and [constant](/book/part-1-instructions/1-sequence-and-data/2-trailside/07-variable#constants) building blocks and [assignment](/book/part-1-instructions/1-sequence-and-data/2-trailside/08-assignment-statement) and [method call](/book/part-1-instructions/1-sequence-and-data/2-trailside/03-method-call) instructions. In this section, we will explore the process of using these concepts to build a simple program.
+There are the following parts to this guided tour:
 
-First, we will examine the whole process of turning an idea into a small program by building a [Change Calculator](/book/part-1-instructions/1-sequence-and-data/1-tour/01-00-change-calculator). For this we will step through the entire design process, including:
+- Learn to use terminal methods by building a travel calculator
+- Learn to use graphical methods by building a house drawing
+- Explore this further with a change calculator
 
-1. Understanding the program and thinking through its steps.
-2. Choosing the building blocks we need to represent this in the computer.
-3. Designing the steps in the algorithm.
-4. Writing the code.
-5. Building and running the program.
-6. Testing our implementation.
-
-Following this, we quickly look at two more programs. The [Airspeed Velocity](/book/part-1-instructions/1-sequence-and-data/1-tour/03-airspeed-velocity) program reads data from the user and calculates bird speed velocity from their wing size and frequency. In the [Water Bottle Visualiser](/book/part-1-instructions/1-sequence-and-data/1-tour/04-water-bottle-visualizer), we create a program that will calculate and draw the height of water in a water bottle based on its current capacity.
-
-By the end of this you should have some tools to help you approach designing your own programs.
+At the end of this you should feel confident building small programs that interact with the user via the terminal and have a graphical output.
