--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/01-00-simple-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/01-00-simple-calculator.mdx
@@ -3,9 +3,7 @@ title: Simple calculator
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
-Let's get coding. Programming is a practical skill, so one of the best ways to learn this is through doing it.
-
-For this guided tour, we will build a travel calculator that can estimate your arrival time based on your current average speed and the remaining distance to travel.
+For this part of the guided tour, we will build a travel calculator that can estimate your arrival time based on your current average speed and the remaining distance to travel.
 
 ## Step 1: Understand what we want
 
