--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/08-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/08-assignment-statement.mdx
@@ -309,7 +309,7 @@ For example, `x = x - 1`, `x -= 1`, and `x--` are all assignment statements whic
 In this example we use `ReadLine` to get input from the user and store it in a `name` variable.
 
 ```csharp
-using static System.Console;
+using static SplashKitSDK.SplashKit;
 
 // Declare a variable - somewhere we can store a string
 string name;
@@ -332,7 +332,7 @@ The following code shows an example of how to use some of the shorthand assignme
 
 ```csharp
 using static System.Convert;
-using static System.Console;
+using static SplashKitSDK.SplashKit;
 
 string line;
 int count;
@@ -395,7 +395,7 @@ You do not always need to store values in variables. Sometimes you can just use 
 
 ```csharp
 using static System.Convert;
-using static System.Console;
+using static SplashKitSDK.SplashKit;
 
 int count;
 
