--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-camp/2-solutions.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-camp/2-solutions.mdx
@@ -11,7 +11,7 @@ Here is our version of the Airspeed velocity program code. When building your ow
     <AccordionItem header="Airspeed Velocity Code">
 
     ```csharp
-    using static System.Console;
+    using static SplashKitSDK.SplashKit;
     using static System.Convert;
 
     const double STROUHAL_LOW_EFFICIENCY = 0.4;
