--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-camp/2-solutions.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-camp/2-solutions.mdx
@@ -61,7 +61,7 @@ Here is our version of the Airspeed velocity program code. When building your ow
 As with the Airspeed Velocity code, this is our version of the water bottle visualiser. Use it if you get stuck building your own version. As always, it is not important that your code matches this exactly. What is important is that you use this example to work through the thinking and coding skills needed to create programs using the concepts from this chapter.
 
 <Accordion>
-    <AccordionItem header="Airspeed Velocity Code">
+    <AccordionItem header="Watter Bottle Code">
 
     ```csharp
     using static System.Convert;
