--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/07-variable.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/07-variable.mdx
@@ -1,6 +1,7 @@
 ---
 title: Variable and Constant
 ---
+import { YouTube } from 'astro-embed';
 
 While fixed literal values are useful, to make programs dynamic you need to be able to work with values that change.
 
@@ -212,3 +213,10 @@ For each piece of information, identify whether it would make the most sense to 
 - A variable **is not** its value -- it is a container that stores a value, but its value can change over time as you write new values into the variable.
 
 :::
+
+## Debugging
+Variables are fundamental and powerful tools in programming, but with that power comes the possibility for new types of bugs to emerge. Let's see how to view and manipulate variables in VS Code's debugger!
+
+<div class="not-content">
+  <YouTube id="N_lgAN7lVHM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
