Add video on types (explanation/demonstration)

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/06-type.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/06-type.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Type"
 ---
+import { YouTube } from 'astro-embed';
 
 In order to build programs, we need ways of making sense of data within the computer. 
 Looking back to the chapter on [Digital Realities](/book/part-0-getting-started/1-digital-realities/0-overview), remember that computers are electronic devices and that everything else on top of that is an **abstraction** that we build. So, how do the tools we have allow us to use different kinds of data within our programs?
@@ -49,7 +50,7 @@ This difference in representation helps us to quickly identify what kind of text
 | `char`    | 2 bytes/16 bits                            |
 | `string`  | various<sup>[a](#FootNoteBasicTypes)</sup> |
 
-<hr class="footnote">
+<hr class="footnote"/>
 <div id="FootNoteBasicTypes" class="footnote">
 <sup>a </sup>The size in memory is determined by the number of characters within the string, plus some overhead.
 </div>
@@ -186,3 +187,9 @@ Identify the types of the following data. Where more than one type is possible, 
 - With the exclusion of addition (which concatenates two pieces of text data), you can perform mathematic operations on numeric data, but not on textual data.
 
 :::
+
+## Video Overview and Demonstration of Types
+In this video we'll briefly look at what types are with some visual examples, then demonstrate how they behave by stepping through some simple code!
+<div class="not-content">
+  <YouTube id="24tac93iRLo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
