--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/06-type.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/06-type.mdx
@@ -191,5 +191,5 @@ Identify the types of the following data. Where more than one type is possible, 
 ## Video Overview and Demonstration of Types
 In this video we'll briefly look at what types are with some visual examples, then demonstrate how they behave by stepping through some simple code!
 <div class="not-content">
-  <YouTube id="24tac93iRLo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="24tac93iRLo" params="fs=1&modestbranding=1&rel=0"/>
 </div>
