--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/07-variable.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/07-variable.mdx
@@ -218,5 +218,5 @@ For each piece of information, identify whether it would make the most sense to 
 Variables are fundamental and powerful tools in programming, but with that power comes the possibility for new types of bugs to emerge. Let's see how to view and manipulate variables in VS Code's debugger!
 
 <div class="not-content">
-  <YouTube id="N_lgAN7lVHM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="N_lgAN7lVHM" params="fs=1&modestbranding=1&rel=0"/>
 </div>
