--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/3-explore/01-airspeed-velocity.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/3-explore/01-airspeed-velocity.mdx
@@ -6,7 +6,7 @@ import { YouTube } from 'astro-embed';
 On your journey, you encountered a strange person who mentioned something about coconuts and queries you vigorously about the airspeed velocity of unladen swallows.
 
 :::note
-This is a reference to a Monty Python film!
+Air speed velocity of swallows is a classic moment from the Monty Python team in the Holy Grail movie. Unfortunately there isn’t currently an official video on this we can embed here. However, you may be able to find reference to this on [YouTube](https://www.youtube.com/results?search_query=monty+python+airspeed+velocity+of+a+swallow) if you search.
 :::
 
 To answer this age-old question, you can mock up the following program to calculate the airspeed velocity of these important birds. With a quick search, you find [an equation](http://www.style.org/strouhalflight) based on the Strouhal Number and some [details on swallows](http://style.org/unladenswallow/). We can use this information to create a program that can calculate the airspeed velocity of African and European Swallows.
