Update circuits diagrams to make it easier for moving to the 7-segment circuit - and add captions

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
@@ -24,12 +24,14 @@ If you don't have a 7-segment display yet, you can click on the "Alternative: Si
 <Tabs>
 <TabItem label="7-Segment Display Decimal Point">
 
-![Wiring diagram to control the 7-segment display decimal point](./images/7-segment-decimal-point-wiring-diagram.png)
+![Wiring diagram to control the 7-segment display decimal point](./images/7-segment-decimal-point-circuit.png)
+<div class="caption">Image created with <a href="https://fritzing.org/">Fritzing</a></div>
 
 </TabItem>
 <TabItem label="Alternative: Simple LED">
 
-![Alternative wiring diagram using LED](./images/led-alternative-wiring-diagram.png)
+![Alternative wiring diagram using LED](./images/led-alternative-circuit.png)
+<div class="caption">Image created with <a href="https://fritzing.org/">Fritzing</a></div>
 
 </TabItem>
 </Tabs>
