Update diagram and move simplified pinout to guided tour

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
@@ -11,9 +11,9 @@ TODO: Overview of Raspberry Pi GPIO Pins:
 - Refer back to [Use Your Raspberry Pi](/book/part-0-getting-started/2-computer-use/1-tour/3-2-setup-raspberry) - give summary of content on that page maybe?
 - Refer back to [Machine Code](/book/part-0-getting-started/1-digital-realities/2-trailside/4-machine-code) - discuss binary values
 - Include tables for relevant Pin Modes and Pin Values
-- Explain 7-segment display
+- Explain 7-segment display (with image below)
 
-![Simple 7-segment display pinout diagram](./images/7-segment-display-pinout.png)
+![Diagram explaining the 7-segment display pin configuration](./images/7-segment-display-pins-explained.png)
 
 ## Example
 
